Updated with Rough Outline from Lab 6 Repo

--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>TypeScript Tutorial</title>
+    <link href="/css/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="container">
+        <h1>A Simple but Effective TypeScript Tutorial!</h1>
+        <h2>- Juan Garcia -</h2>
+
+        <div class="subject">
+            <div class="subjectTitle">Introduction</div>
+            <div class="subjectContents">
+                This section will first cover a brief overview of TypeScript and why it exists, covering what
+                problems it solves and why it matters. This section will also go over some basics such as static
+                type-checking, description of the compiler, and strictness (as outlined in The TypeScript Handbook.
+            </div>
+        </div>
+
+        <div class="subject">
+            <div class="subjectTitle">The Types of Types in TypeScript</div>
+            <div class="subjectContents">
+                This section will outline the primitive data types available in JavaScript that are used in
+                TypeScript. From there, this section will expand on the additional types available thanks to
+                the use of TypeScript.
+            </div>
+        </div>
+
+        <div class="subject">
+            <div class="subjectTitle">Functions in TypeScript</div>
+            <div class="subjectContents">
+                The TypeScript Handbook covers a lot of information when it comes to functions. This section will
+                provide a bit of an abbreviated version, explaining key points like inference, constraints, parameters,
+                and more.
+            </div>
+        </div>
+
+        <div class="subject">
+            <div class="subjectTitle">A Quick Class on Classes</div>
+            <div class="subjectContents">
+                This section goes over a lot of information in the TypeScript Handbook when it comes to classes.
+            </div>
+        </div>
+
+        <div class="subject">
+            <div class="subjectTitle">Organizing Code with Modules</div>
+            <div class="subjectContents">
+                This section will describe how modules work in TypeScript and explain its benefits. Touching on scope,
+                it will delve into how TypeScript leverages this to keep things organized.
+            </div>
+        </div>
+    </div>
+</body>
+</html>
